web-infras/parser/tests/fixtures/babel/jsx/errors/_no-plugin-fragment/output.txt
[SyntaxError]: This experimental syntax requires enabling jsx plugins. (3,5)
3|    <>Hello</>
 |   ^
